Fix scrollBarr

--- a/public/assets/plugins/bootstrap/css/custom.css
+++ b/public/assets/plugins/bootstrap/css/custom.css
@@ -220,3 +220,9 @@
 .hamburger-inner.custom::after {
     background-color: var(--dark);
 }
+
+
+.page-inner.page-inner-fill{
+    min-height: 700px;
+    margin-right: unset;
+}
